# task-in-the-flask

./: .gitignore  README.rst  noxfile.py  pyproject.toml  run.py
.github/workflows/: test.yml
app/: __init__.py  models.py  projects.py  routes.py  tasks.py  users.py
src/app/: __init__.py  database.py  models.py  routes.py  schema.py  user_authentication.py
test/: test_tasks.py
tests/: config.py  test_app.py  test_routes.py  test_task_in_the_flask.py  test_user.py
